--- a/python/project.ipynb
+++ b/python/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,6 @@
     "        return answers[IMPRESSIONS.keys()]\n",
     "    else:\n",
     "        return answers\n",
-    "\n",
     "    \n",
     "def collect_features(identifier, aggregate=None):\n",
     "    \"\"\"\n",
@@ -122,6 +121,7 @@
     "             video and each columns is a facial feature recorded during that video.\n",
     "    \"\"\"\n",
     "    answers = collect_answers()\n",
+    "    answers.index = [\"1\",\"2\",\"3\"] #wont be needed aftewards because the id will be part of the answers of the survey\n",
     "    identifiers = answers.index.values\n",
     "    ans = pd.DataFrame()\n",
     "    for id_ in identifiers:\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "3               3.2  3.000000          2.6           3.0"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,21 +592,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data//featuresnan.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-221-218560388593>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mall_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcollect_all_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mall_features\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-214-6941fa808002>\u001b[0m in \u001b[0;36mcollect_all_features\u001b[0;34m(aggregate)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mid_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0midentifiers\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m         \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcollect_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maggregate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maggregate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mans\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-214-6941fa808002>\u001b[0m in \u001b[0;36mcollect_features\u001b[0;34m(identifier, aggregate)\u001b[0m\n\u001b[1;32m     30\u001b[0m              \u001b[0ma\u001b[0m \u001b[0mtimestamp\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0meach\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0ma\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \"\"\"\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"/features{0}.json\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midentifier\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mjson_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;31m#print(json.dumps(data, indent=4, sort_keys=True))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data//featuresnan.json'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>smile</th>\n",
+       "      <th>innerBrowRaise</th>\n",
+       "      <th>browRaise</th>\n",
+       "      <th>browFurrow</th>\n",
+       "      <th>noseWrinkle</th>\n",
+       "      <th>upperLipRaise</th>\n",
+       "      <th>lipCornerDepressor</th>\n",
+       "      <th>chinRaise</th>\n",
+       "      <th>lipPucker</th>\n",
+       "      <th>lipPress</th>\n",
+       "      <th>...</th>\n",
+       "      <th>mouthOpen</th>\n",
+       "      <th>smirk</th>\n",
+       "      <th>eyeClosure</th>\n",
+       "      <th>attention</th>\n",
+       "      <th>lidTighten</th>\n",
+       "      <th>jawDrop</th>\n",
+       "      <th>dimpler</th>\n",
+       "      <th>eyeWiden</th>\n",
+       "      <th>cheekRaise</th>\n",
+       "      <th>lipStretch</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>22.751553</td>\n",
+       "      <td>7.770186</td>\n",
+       "      <td>42.024845</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.012422</td>\n",
+       "      <td>0.049689</td>\n",
+       "      <td>11.465839</td>\n",
+       "      <td>0.236025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.838509</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.21118</td>\n",
+       "      <td>0.21118</td>\n",
+       "      <td>98.391304</td>\n",
+       "      <td>0.055901</td>\n",
+       "      <td>0.614907</td>\n",
+       "      <td>42.826087</td>\n",
+       "      <td>37.409938</td>\n",
+       "      <td>7.130435</td>\n",
+       "      <td>33.074534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>22.751553</td>\n",
+       "      <td>7.770186</td>\n",
+       "      <td>42.024845</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.012422</td>\n",
+       "      <td>0.049689</td>\n",
+       "      <td>11.465839</td>\n",
+       "      <td>0.236025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.838509</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.21118</td>\n",
+       "      <td>0.21118</td>\n",
+       "      <td>98.391304</td>\n",
+       "      <td>0.055901</td>\n",
+       "      <td>0.614907</td>\n",
+       "      <td>42.826087</td>\n",
+       "      <td>37.409938</td>\n",
+       "      <td>7.130435</td>\n",
+       "      <td>33.074534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>22.751553</td>\n",
+       "      <td>7.770186</td>\n",
+       "      <td>42.024845</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.012422</td>\n",
+       "      <td>0.049689</td>\n",
+       "      <td>11.465839</td>\n",
+       "      <td>0.236025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.838509</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.21118</td>\n",
+       "      <td>0.21118</td>\n",
+       "      <td>98.391304</td>\n",
+       "      <td>0.055901</td>\n",
+       "      <td>0.614907</td>\n",
+       "      <td>42.826087</td>\n",
+       "      <td>37.409938</td>\n",
+       "      <td>7.130435</td>\n",
+       "      <td>33.074534</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        smile  innerBrowRaise  browRaise  browFurrow  noseWrinkle  \\\n",
+       "id                                                                  \n",
+       "1   22.751553        7.770186  42.024845         0.0     0.012422   \n",
+       "2   22.751553        7.770186  42.024845         0.0     0.012422   \n",
+       "3   22.751553        7.770186  42.024845         0.0     0.012422   \n",
+       "\n",
+       "    upperLipRaise  lipCornerDepressor  chinRaise  lipPucker  lipPress  ...  \\\n",
+       "id                                                                     ...   \n",
+       "1        0.049689           11.465839   0.236025        0.0  8.838509  ...   \n",
+       "2        0.049689           11.465839   0.236025        0.0  8.838509  ...   \n",
+       "3        0.049689           11.465839   0.236025        0.0  8.838509  ...   \n",
+       "\n",
+       "    mouthOpen     smirk  eyeClosure  attention  lidTighten   jawDrop  \\\n",
+       "id                                                                     \n",
+       "1         0.0  14.21118     0.21118  98.391304    0.055901  0.614907   \n",
+       "2         0.0  14.21118     0.21118  98.391304    0.055901  0.614907   \n",
+       "3         0.0  14.21118     0.21118  98.391304    0.055901  0.614907   \n",
+       "\n",
+       "      dimpler   eyeWiden  cheekRaise  lipStretch  \n",
+       "id                                                \n",
+       "1   42.826087  37.409938    7.130435   33.074534  \n",
+       "2   42.826087  37.409938    7.130435   33.074534  \n",
+       "3   42.826087  37.409938    7.130435   33.074534  \n",
+       "\n",
+       "[3 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
